package game_ambjl_protocols;

import "game_ambjl_def.proto"; 
import "msg_type_def.proto"; 

//广播玩家金币变更
message packetl2c_bc_change_attr {
	optional e_server_msg_type packet_id = 1 [default = e_mst_l2c_bc_change_attr];
	optional int32 player_id = 2;
	optional int64 change_gold = 3;
}

//充值中
message packetc2l_recharging
{
	optional e_server_msg_type packet_id = 1 [default = e_mst_c2l_recharging];
}
//广播玩家充值中
message packetl2c_bc_recharging
{
	optional e_server_msg_type packet_id = 1 [default = e_mst_l2c_bc_recharging];
	optional int32 player_id = 2;
}