package game_fruitmachine_protocols; 

enum e_server_msg_type {
	//客户端到服务端
    e_mst_start_c2l = 10000;
	e_mst_c2l_get_room_info = 10001;//得到房间
	e_mst_c2l_enter_room = 10002;//进入房间
	e_mst_c2l_leave_room = 10003;//离开房间
	e_mst_c2l_add_bet = 10004;//下注
	e_mst_c2l_repeat_bet = 10005;//重复押注
	e_mst_c2l_get_room_scene_info = 10007;//获得桌子内信息
	e_mst_c2l_check_state = 10008;//检测游戏状态
	e_mst_c2l_gm = 10009;//GM
    e_mst_c2l_start_game = 10010;//开始游戏
    e_mst_c2l_start_bigsmall = 10011;	//开始比大小
	e_mst_c2l_break_bigsmall = 10012;	//中止比大小
	e_mst_c2l_cancel_bet = 10013;		// 取消下注
	e_mst_c2l_debug = 10014;			//debug调试

	// 服务端到客户端---------------------------------------------------------------------------

	e_mst_start_l2c = 15000;
	e_mst_l2c_get_room_info_result = 15001;//得到房间返回
	e_mst_l2c_enter_room_result = 15002;//进入房间
	e_mst_l2c_leave_room_result = 15003;//离开房间
	e_mst_l2c_add_bet = 15004;//下注
	e_mst_l2c_repeat_bet = 15005;//重复押注
	e_mst_l2c_enter_player_info = 15006;	//玩家进入房间
	e_mst_l2c_leave_player_info = 15007;	//玩家离开房间
	e_mst_l2c_player_change_money = 15008;	//玩家钱变化
	e_mst_l2c_get_room_scene_info = 15010;//获得桌子内信息
	e_mst_l2c_check_state_result = 15013;//检测游戏状态
    e_mst_l2c_start_game = 15014;//开始游戏结果
    e_mst_l2c_start_bigsmall = 15015;
	e_mst_l2c_break_bigsmall_result = 15016;	//中止比大小
	e_mst_l2c_cancel_bet_result = 15017;		//取消下注结果
	e_mst_l2c_notify_water = 15018;		//抽水通知
	e_mst_l2c_player_list = 15019;		//玩家列表
	e_mst_l2c_debug_result = 15020;


	e_mst_clend_index = 20000;
}

enum e_game_state {
	e_state_game_wait = 0;		//等待阶段,可以下注
	e_state_game_bigsmall = 1;	//比大小阶段
}

//玩家押注信息
message msg_bet_info {
	optional int32 bet_index = 1;				
	optional int32 bet_count = 2;		
}

//开奖结果
message msg_result_index
{
	optional int32 id = 1;
	optional int32 count = 2;
}